src/generator/snapshots/tailcall__generator__from_proto__test__from_proto_no_pkg_file.snap
---
source: src/generator/from_proto.rs
expression: result
---
schema @server @upstream {
  query: Query
}

type NEWS @tag(id: "News") {
  body: String
  id: Int
  post_image: String
  title: String
}

type NEWS_LIST @tag(id: "NewsList") {
  news: [NEWS]
}

type Query {
  get_all_news: NEWS_LIST! @grpc(method: "GetAllNews")
}
