src/generator/snapshots/tailcall__generator__from_proto__test__greetings_proto_file.snap
---
source: src/generator/from_proto.rs
expression: result
---
schema @server @upstream {
  query: Query
}

type Greetings {
  sayHello(helloRequest: HelloRequest!): Greetings__HelloReply! @grpc(method: "greetings.Greeter.SayHello")
}

type Greetings__HelloReply @tag(id: "greetings.HelloReply") {
  message: String
}

type Query {
  greetings: Greetings
}
